# CANTest

./: CMakeLists.txt  README.md  boat.cfg  main.cpp
lib/: Device.cpp  Device.h
lib/communication/: canbus.cpp  canbus.h
lib/configuration/: Config.cpp  Config.h  ConfigSection.cpp  ConfigSection.h
lib/devices/: Sonar.cpp  Sonar.h
src/: main.cpp
